@@ -1,3 +1,10 @@
+2005-12-31  Ben Elliston  <bje@gnu.org>
+
+	* doc/ref.xml (Utility Procedures): Note that the following
+	procedures are deprecated: absolute, psource, prune, slay.
+	* NEWS: Likewise.
+	* doc/dejagnu.texi: Regenerate.
+
 2005-12-24  Ben Elliston  <bje@gnu.org>
 
 	* Makefile.am (doc/dejagnu.texi): Don't use shell redirection, in
